# onnxruntime-coreml

./: README.md  build-onnxruntime.sh  prerequisites.sh  publish-onnxruntime.sh  pyproject.toml  uninstall.sh
