[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onnxruntime-coreml"
version = "1.13.1"
authors = [
  { name="chipcode", email="onnxruntime@microsoft.com" },
]
description = "ONNX Runtime is a performance-focused scoring engine for Open Neural Network Exchange (ONNX) models. To support Apple silicon M1 / M2, this version is compiled for ARM64 with CoreML enabled."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS",
]

[project.urls]
"Homepage" = "https://onnxruntime.ai/"
"Bug Tracker" = "https://github.com/microsoft/onnxruntime/issues"